# puiky

./: .env.example  .env.prod.example  .gitattributes  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/_archive_pre_multitenant/: 0003_responsibilities.py  0007_notebooks.py  0010_task_checklist_fechas.py  0011_task_descripcion_notas.py
backend/alembic/versions/: 0001_notes.py  0002_projects_tasks.py  0004_finances.py  0005_reminders.py  0006_users.py  0008_note_titulo.py  0009_portfolios.py  control_0001_control.py  control_0002_enroll_code.py  control_0003_whatsapp_link.py  domain_0001_baseline.py  domain_0002_market.py  domain_0003_shopping_trip.py  domain_0004_responsibility_finance.py  domain_0005_reminder_proximo_aviso.py  domain_0006_project_fechas.py  domain_0007_notas_proyecto_cuaderno.py  domain_0008_notas_tarea_cuaderno.py  domain_0009_recurrencia_task_reminder.py  domain_0010_proyecto_personal.py  domain_0011_cuadernos_de_proyectos.py
backend/app/: config.py  create_user.py  database.py  embeddings.py  enroll_code.py  link_telegram.py  main.py  migrate_all.py  migrate_to_multitenant.py  provision.py  seed_demo.py  tenancy.py  timeutils.py  wa_client.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/bot/: __init__.py  client.py  handlers.py  main.py
backend/app/models/: __init__.py  base.py  finances.py  market.py  (+8 more)
backend/tests/: test_auth.py  test_bot.py  test_embeddings.py  test_nlu.py  test_scheduler.py
(+89 files in other folders)
