[project]
name = "puiky-backend"
version = "0.1.0"
description = "Puiky — backend / API (Fase 1)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic-settings>=2.5",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "openai>=1.50",
    "faster-whisper>=1.0",
    "python-multipart>=0.0.9",
    "python-telegram-bot>=21.0",
    "tzdata>=2024.1",
    "pyjwt>=2.9",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

# --- uv ---
# torch se instala desde el índice CPU-only: evita descargar CUDA (~varios GB)
# y mantiene la imagen ligera y portable entre Windows y Ubuntu.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.setuptools]
packages = ["app"]
